--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -46,3 +46,15 @@
   gap: $espaciado;
   grid-template-columns: repeat($columnas, 1fr);
 }
+
+@mixin contenedor {
+  // max-width: 120rem;
+  // width: 95%;
+  width: min(95%, 120rem);
+  margin: 0 auto;
+}
+
+@mixin contenedor_sm {
+  width: min(95%, 60rem);
+  margin: 0 auto;
+}
