--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -4,6 +4,7 @@
 h1,
 h2,
 h3 {
+  @include m.headings;
 }
 
 h1 {
@@ -17,4 +18,9 @@ h3 {
 }
 .text-center {
   text-align: center;
+}
+
+// Selector por atributo para darle estilos a todas las clases que terminen con "__heading"
+[class$="__heading"] {
+  @include m.nombre-pagina;
 }
