--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -48,9 +48,9 @@
 }
 
 @mixin contenedor {
-  // max-width: 120rem;
+  // max-width: 140rem;
   // width: 95%;
-  width: min(95%, 120rem);
+  width: min(95%, 140rem);
   margin: 0 auto;
 }
 
@@ -69,4 +69,15 @@
   @include headings;
   margin: 6rem 0 3rem 0;
   text-align: center;
+}
+
+@mixin texto-fluido($min, $max) {
+  // Aplica el valor del medio cuando no haya espacio para el máximo y sobre espacio para el mínimo
+  font-size: clamp($min, (-0.8rem + 10vw), $max);
+}
+
+@mixin texto-degradado($inicio, $final) {
+  background: linear-gradient(to right, $inicio, $final);
+  background-clip: text;
+  color: transparent;
 }
