Add mixin for link styles

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -136,3 +136,17 @@
     display: none;
   }
 }
+
+@mixin enlace {
+  all: unset;
+  color: v.$blanco;
+  text-transform: uppercase;
+  font-weight: v.$bold;
+  background-color: transparent;
+  border: none;
+
+  &:hover {
+    color: v.$azul;
+    cursor: pointer;
+  }
+}
