--- a/src/scss/ui/header/_header.scss
+++ b/src/scss/ui/header/_header.scss
@@ -31,13 +31,7 @@
   }
 
   &__enlace {
-    color: v.$blanco;
-    text-transform: uppercase;
-    font-weight: v.$bold;
-
-    &:hover {
-      color: v.$azul;
-    }
+    @include m.enlace;
   }
 
   &__contenido {
