--- a/src/scss/admin/_dashboard.scss
+++ b/src/scss/admin/_dashboard.scss
@@ -63,7 +63,8 @@
     transition: 300ms background-color ease-in-out, 300ms color ease,
       300ms border-radius ease;
 
-    &:hover {
+    &:hover,
+    &--actual {
       background-color: lighten($color: v.$gris-oscuro, $amount: 20);
       color: v.$blanco;
       border-radius: 1rem;
